cluster/apps/default/vikunja/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vikunja
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`vikunja.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: vikunja
          port: 8080
  tls:
    secretName: ${SECRET_CERT}
